# Phalanx-Arena

./: .env.example  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  game_rules.md  run-dev.bat
backend/: README.md  hatch_build.py  pyproject.toml  tournament-roster.json
backend/runs/full-tournament-battle-reports/battle-report-classic_battle-seed0007-pairing000-match000-openai-gpt-5-5-vs-claude-opus-4-7/: state-summary.json
backend/runs/full-tournament-battle-reports/battle-report-classic_battle-seed0007-pairing000-match001-claude-opus-4-7-vs-openai-gpt-5-5/: state-summary.json
backend/runs/full-tournament-battle-reports/battle-report-classic_battle-seed0007-pairing000-match002-openai-gpt-5-5-vs-claude-opus-4-7/: state-summary.json
backend/runs/full-tournament-battle-reports/battle-report-classic_battle-seed0007-pairing000-match003-claude-opus-4-7-vs-openai-gpt-5-5/: state-summary.json
backend/runs/full-tournament-battle-reports/battle-report-classic_battle-seed0007-pairing001-match000-openai-gpt-5-5-vs-grok-4-20-reasoning/: state-summary.json
backend/runs/full-tournament-battle-reports/battle-report-classic_battle-seed0007-pairing001-match001-grok-4-20-reasoning-vs-openai-gpt-5-5/: state-summary.json
backend/runs/full-tournament-battle-reports/battle-report-classic_battle-seed0007-pairing001-match002-openai-gpt-5-5-vs-grok-4-20-reasoning/: state-summary.json
backend/src/backend/: ai_common.py  ai_system_prompt.py  battle_reports.py  config.py  headless.py  models.py  prompting_adapter.py  provider_catalog.py  provider_factory.py  state_support.py  store.py  tournament.py
backend/tests/: test_ai.py  test_engine_adapter.py  test_headless.py  test_rules_metadata.py  test_scenario_library.py  test_tournament.py
engine/engine-core/: Cargo.toml  build.rs
engine/engine-core/scenario_library/: classic_battle.json
engine/engine-core/src/: combat.rs  core.rs  error.rs  lib.rs  movement.rs  prompting.rs  rules_shared.rs  scenario.rs  types.rs
engine/engine-core/tests/: basic.rs
engine/engine-wasm/: Cargo.toml
engine/engine-wasm/src/: lib.rs
(+278 files in other folders)
