[workspace]
members = [
    "engine/engine-cli",
    "engine/engine-core",
    "engine/engine-wasm",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
uuid = { version = "1", features = ["js", "serde", "v4"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
