[project]
name = "phalanx-backend"
version = "0.1.0"
description = "Deterministic grid-based ancient battle benchmarking toolkit"
readme = "README.md"
authors = [
    { name = "Raphael Doan", email = "92806208+raphaeldoan@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.0,<3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0,<9.0.0",
]

[project.scripts]
phalanx-headless-benchmark = "backend.headless:main"
phalanx-headless-tournament = "backend.tournament:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
