[package]
name = "engine-core"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[lib]
name = "engine_core"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
