[package]
name = "engine-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "engine_wasm"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
engine-core = { path = "../engine-core" }
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true

